[gd_scene load_steps=4 format=3 uid="uid://ctq0wqkxya3ou"]

[ext_resource type="Script" path="res://scenes/scripts/tutorial_2.gd" id="1_eo3iw"]
[ext_resource type="Theme" uid="uid://dti72e04ltog4" path="res://game.theme" id="2_mo38l"]
[ext_resource type="AudioStream" uid="uid://i6mb63m4vyaa" path="res://SFX/possessed_hit2.ogg" id="3_b1gqx"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_eo3iw")

[node name="Label1" type="Label" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 578.0
offset_right = 405.0
offset_bottom = 743.0
theme = ExtResource("2_mo38l")
theme_override_font_sizes/font_size = 40
text = "When a firefly reaches
the human, the human is healed"

[node name="first" type="Area2D" parent="Label1"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Label1/first"]
polygon = PackedVector2Array(-9, 113, 510, 107, 505, 4, -5, 4)

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 363.0
offset_right = 475.0
offset_bottom = 474.0
theme = ExtResource("2_mo38l")
theme_override_font_sizes/font_size = 40
text = "Protect the sleeping human
Hit the ghosts"

[node name="second" type="Area2D" parent="Label2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Label2/second"]
polygon = PackedVector2Array(-3, 107, 228, 111, 229, 56, 436, 55, 438, 7, -1, 3)

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_b1gqx")

[connection signal="body_entered" from="Label1/first" to="." method="_on_first_body_entered"]
[connection signal="body_entered" from="Label2/second" to="." method="_on_second_body_entered"]
